upd: readme.md
