# docs/swagger.json
@@ -1570,6 +1570,34 @@
                     }
                 ],
                 "responses": {}
+            },
+            "patch": {
+                "security": [
+                    {
+                        "CookieAuth": []
+                    }
+                ],
+                "description": "Deletes the department's information",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Department"
+                ],
+                "summary": "Delete Department Information",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Department ID",
+                        "name": "_id",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {}
             }
         },
         "/api/v1/departments/get": {
@@ -1623,6 +1651,27 @@
                 "responses": {}
             }
         },
+        "/api/v1/departments/get/all/deleted": {
+            "get": {
+                "security": [
+                    {
+                        "CookieAuth": []
+                    }
+                ],
+                "description": "Retrieves the department's information",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Department"
+                ],
+                "summary": "Get Department Information",
+                "responses": {}
+            }
+        },
         "/api/v1/departments/get/name": {
             "get": {
                 "security": [
@@ -1646,6 +1695,36 @@
                         "type": "string",
                         "description": "Contract ID",
                         "name": "name",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {}
+            }
+        },
+        "/api/v1/departments/get/status": {
+            "get": {
+                "security": [
+                    {
+                        "CookieAuth": []
+                    }
+                ],
+                "description": "Retrieves the department's information name",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Department"
+                ],
+                "summary": "Get Department Information By ID",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Status",
+                        "name": "status",
                         "in": "query",
                         "required": true
                     }
@@ -5274,7 +5353,6 @@
                     "example": "Human Resources"
                 },
                 "parentID": {
-                    "description": "tên phòng ban cha",
                     "type": "string"
                 }
             }
@@ -5420,11 +5498,19 @@
         "inventory_domain.Input": {
             "type": "object",
             "properties": {
+                "expiry_date": {
+                    "description": "if applicable",
+                    "type": "string"
+                },
                 "product_id": {
                     "type": "string"
                 },
                 "quantity": {
                     "type": "integer"
+                },
+                "status": {
+                    "description": "e.g., \"in stock\", \"out of stock\"",
+                    "type": "string"
                 },
                 "warehouse_id": {
                     "type": "string"
@@ -5578,13 +5664,10 @@
                 "asset_url": {
                     "type": "string"
                 },
-                "avatar_url": {
-                    "type": "string"
-                },
                 "description": {
                     "type": "string"
                 },
-                "expiry_date": {
+                "image_url": {
                     "type": "string"
                 },
                 "price": {
@@ -5595,9 +5678,6 @@
                 },
                 "product_name": {
                     "type": "string"
-                },
-                "quantity_in_stock": {
-                    "type": "integer"
                 }
             }
         },
